@startuml
class ChecklistItem {
  - title: String
  - price: int
  + ChecklistItem(title: String, price: int)
}

class CheckListScreen {
  - checklistItems: List<ChecklistItem>
  - emotion: List<ChecklistItem>
  - checkBoxValues: List<bool>
  - emotionCheckBoxValues: List<bool>
  - totalAmount: int
  - today: String
  + initState(): void
  + getDate(): void
  + build(context: BuildContext): Widget
  + calculateTotalAmount(): void
}

CheckListScreen --|> StatefulWidget
CheckListScreen --> ChecklistItem
@enduml
